codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__memories_reset_confirmation.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Reset all memories?

❯ Reset all memories  Delete local memory files and rollout summaries.
  Go back             Return to memory settings.



  Press enter to confirm or esc to go back
