codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_advanced_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Advanced Reasoning
  ⚠ Consumes usage limits faster

  1. Max              For difficult problems when quality matters more than
                      speed · higher usage
❯ 2. Ultra (current)  For demanding work using multiple agents · highest usage

  Press enter to confirm or esc to go back
